--- a/latex/trie_tree_report.tex
+++ b/latex/trie_tree_report.tex
@@ -202,7 +202,114 @@ El método \texttt{delete} es el núcleo del proceso de eliminación. A continua
   \item \textbf{Eliminación Condicional:} Se llama recursivamente al método \texttt{delete} con el nodo hijo, la palabra y el índice incrementado. Si esta llamada retorna \texttt{true}, significa que el nodo hijo puede ser eliminado. Por lo tanto, se elimina el nodo hijo del mapa de hijos del nodo actual y se retorna \texttt{true} si el nodo actual no tiene más hijos.
 \end{itemize}
 
+\subsection{Ranking de frecuencia}
+
+\begin{minted}[bgcolor=background]{java}
+  public List<String> findTopKFrequentWords(int k) {
+    PriorityQueue<Map.Entry<String, Integer>> minHeap = new PriorityQueue<>((a, b) -> a.getValue() - b.getValue());
+    Map<String, Integer> wordFrequencyMap = new HashMap<>();
+    findTopKFrequentWordsHelper(root, "", wordFrequencyMap);
+    for (Map.Entry<String, Integer> entry : wordFrequencyMap.entrySet()) {
+      minHeap.offer(entry);
+      if (minHeap.size() > k) {
+        minHeap.poll();
+      }
+    }
+    List<String> result = new ArrayList<>();
+    while (!minHeap.isEmpty()) {
+        result.add(minHeap.poll().getKey());
+    }
+    Collections.reverse(result);
+    return result;
+  }
+  private void findTopKFrequentWordsHelper(TrieNode node, String word, Map<String, Integer> wordFrequencyMap) {
+    if (node == null) {
+      return;
+    }
+    if (node.isEndOfWord) {
+      wordFrequencyMap.put(word, node.count);
+    }
+    for (Map.Entry<Character, TrieNode> entry : node.children.entrySet()) {
+      findTopKFrequentWordsHelper(entry.getValue(), word + entry.getKey(), wordFrequencyMap);
+    }
+  }
+\end{minted}
+
+\subsection{El Método \texttt{findTopKFrequentWords}}
+\begin{itemize}
+  \item \textbf{Descripción General} : La función \texttt{findTopKFrequentWords} toma un parámetro entero \texttt{k} y devuelve una lista de las \texttt{k} palabras más frecuentes en el trie. Para lograr esto, utiliza una cola de prioridad (min-heap) para mantener un seguimiento de las palabras más frecuentes.
+  \item \textbf{HashMap de Frecuencias} : Primero, crea un \texttt{HashMap} llamado \texttt{wordFrequencyMap} para almacenar la frecuencia de cada palabra. Luego, llama a la función auxiliar {findTopKFrequentWordsHelper} para llenar este mapa.
+  \item \textbf{Llenado de la Cola de Prioridad} : Después de llenar el mapa de frecuencias, la función itera sobre las entradas del mapa e inserta cada entrada en la cola de prioridad. Si el tamaño de la cola excede \texttt{k}, se elimina la entrada con la frecuencia más baja. Esto asegura que la cola de prioridad contenga sólo las \texttt{k} entradas más frecuentes.
+  \item \textbf{Generación del Resultado} : Finalmente, la función extrae las entradas de la cola de prioridad, las agrega a una lista, y revierte el orden de la lista antes de devolverla, ya que la cola de prioridad saca las palabras en orden ascendente de frecuencia.
+\end{itemize}
+
+\subsection{Reemplazar palabras en un texto}
+
+\begin{minted}[bgcolor=background]{java}
+  public String replaceWordsInText(String text, Map<String, String> replacements) {
+    StringBuilder result = new StringBuilder();
+    String[] words = text.split("\\s+");
+    for (String word : words) {
+      if (contains(word)) {
+        result.append(replacements.getOrDefault(word, word)).append(" ");
+      } else {
+        result.append(word).append(" ");
+      }
+    }
+    return result.toString().trim();
+  }
+\end{minted}
+
+
+\subsection{El Método \texttt{replaceWordsInText}}
+\begin{itemize}
+  \item \textbf{Descripción General} : La función \texttt{replaceWordsInText} toma un texto y un mapa de reemplazos, y devuelve el texto con ciertas palabras reemplazadas según el mapa.
+  \item \textbf{Inicialización del Resultado} : Se utiliza un \texttt{StringBuilder} llamado \texttt{result} para construir el texto resultante de manera eficiente. El texto se divide en palabras utilizando el método \texttt{split} con el delimitador de espacios en blanco (\texttt{"\\s+"}).
+  \item \textbf{Iteración y Reemplazo} : Se itera sobre cada palabra en el arreglo \texttt{words}. Para cada palabra, se verifica si debe ser reemplazada. Si la palabra está en el mapa de reemplazos, se añade el reemplazo al \texttt{StringBuilder}. Si no, se añade la palabra original.
+  \item \textbf{Devolución del Resultado} : Finalmente, se convierte el \texttt{StringBuilder} a una cadena, se eliminan los espacios al principio y al final, y se devuelve el resultado.
+\end{itemize}
+
+\subsection{Busqueda de palabras por un prefijo}
+
+\begin{minted}[bgcolor=background]{java}
+  private void collectWords(TrieNode node, String prefix, List<String> words) {
+    if (node.isEndOfWord) {
+      words.add(prefix);
+    }
+    for (Map.Entry<Character, TrieNode> entry : node.children.entrySet()) {
+      collectWords(entry.getValue(), prefix + entry.getKey(), words);
+    }
+  }
+  private TrieNode searchNode(String prefix) {
+    TrieNode node = root;
+    for (char c : prefix.toCharArray()) {
+      node = node.children.get(c);
+      if (node == null) {
+        return null;
+      }
+    }
+    return node;
+  }
+  public List<String> searchByPrefix(String prefix) {
+    List<String> words = new ArrayList<>();
+    TrieNode node = searchNode(prefix);
+    if (node != null) {
+      collectWords(node, prefix, words);
+    }
+    return words;
+  }
+\end{minted}
+
+\subsection{El Método \texttt{searchByPrefix}}
+\begin{itemize}
+  \item \textbf{Descripción General} : La función \texttt{searchByPrefix} busca todas las palabras en el trie que comienzan con un prefijo dado. Primero, utiliza \texttt{searchNode} para encontrar el nodo del trie correspondiente al final del prefijo. Luego, utiliza \texttt{collectWords} para recoger todas las palabras que tienen el prefijo especificado.
+  \item \textbf{Búsqueda del Nodo} : La función \texttt{searchNode} recibe un prefijo y recorre el trie siguiendo los caracteres del prefijo. Si en algún momento el nodo no existe, la función retorna \texttt{null}. De lo contrario, retorna el nodo donde termina el prefijo.
+  \item \textbf{Recogida de Palabras} : La función \texttt{collectWords} es recursiva y recolecta todas las palabras que se encuentran bajo un nodo dado en el trie. Si el nodo actual marca el final de una palabra (\texttt{isEndOfWord} es \texttt{true}), añade el prefijo correspondiente a la lista de palabras.
+  \item \textbf{Ejecución y Resultado} : En \texttt{searchByPrefix}, si el nodo del prefijo no es \texttt{null}, se llama a \texttt{collectWords} para obtener todas las palabras bajo ese nodo. Finalmente, la función devuelve la lista de palabras encontradas.
+\end{itemize}
+
 \subsection{Impresión del Trie}
+
 \begin{minted}[bgcolor=background]{java}
 public void printTrie() {
   printTrie(root, "", true);
@@ -221,6 +328,7 @@ private void printTrie(TrieNode node, String prefix, boolean isTail) {
     }
   }
 }
+
 \end{minted}
 
 Este método imprime el Trie de manera visual utilizando caracteres especiales. Muestra la jerarquía de los nodos y la cuenta de palabras que terminan en cada nodo.
@@ -246,7 +354,19 @@ java TestTree
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=1.0\textwidth]{img/test_trie.png}
+  \includegraphics[width=1.0\textwidth]{img/E1.png}
+  \caption{Trie Tree}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1.0\textwidth]{img/E2.png}
+  \caption{Trie Tree}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1.0\textwidth]{img/E3.png}
   \caption{Trie Tree}
 \end{figure}
 
